# docsport

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  __init__.py  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start_docsport.bat
.github/workflows/: ci.yml
backend/: __init__.py  analysis.py  app.py  execution.py  i18n.py  visual_analyzer.py  visualization.py
backend/locales/: de.json  en.json  es.json
frontend/locales/: de.json  en.json  es.json
frontend/static/css/: main.css
frontend/static/js/: i18n.js  main.js
frontend/templates/: index.html
tests/: conftest.py  test_analysis.py  test_api.py  test_execution.py
