[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docsport"
version = "2.0.0"
description = "Intelligent Python code documentation and analysis tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "MediaQuotes"}]
keywords = ["documentation", "code-analysis", "ast", "python", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "jinja2==3.1.2",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.25",
    "ruff>=0.1",
]

[project.scripts]
docsport = "main:main"

[project.urls]
Homepage = "https://github.com/mediaquotes/docsport"
Repository = "https://github.com/mediaquotes/docsport"
Issues = "https://github.com/mediaquotes/docsport/issues"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
